samples/_failures_safe/1761150612_2f2d05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d1d87be.c: In function ‘main’:
./samples/SAFE/__tmp_3d1d87be.c:167:9: error: expected expression at end of input
  167 |         if (src < 0 || src >= numNodes || dest < 0 || dest >=
      |         ^~
./samples/SAFE/__tmp_3d1d87be.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d1d87be.c:167:9: error: expected declaration or statement at end of input
